--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -82,7 +82,14 @@ html, body {
 
 /* Profile/Name/Title/Resume */
 
+.profile-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .profile-container {
+  display: flex;
   justify-content: center;
   outline: auto;
   outline-width: 5px;
@@ -90,6 +97,8 @@ html, body {
   padding: 20px;
   width: 100%;
   height: auto;
+  flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 
 .profile-content {
@@ -163,6 +172,31 @@ html, body {
 
 .download-resume:hover {
   color: lightgreen;
+}
+
+@media screen and (max-width: 768px) {
+  .profile-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .profile-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .v-profile {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px;
+  }
+
+  .name, .my-title, .download-resume {
+    margin-left: 0;
+  }
 }
 
 /* Socials / Devicons */
