--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -88,7 +88,7 @@ html, body {
   align-items: center;
 }
 
-.profile-container {
+.profile-box {
   display: flex;
   justify-content: center;
   outline: auto;
@@ -175,7 +175,7 @@ html, body {
 }
 
 @media screen and (max-width: 768px) {
-  .profile-container {
+  .profile-box {
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -202,15 +202,60 @@ html, body {
 /* Socials / Devicons */
 
 .socials {
+  font-size: 20px;
+  display: flex;
   justify-content: center;
-  margin-top: 400px;
+  align-items: center;
   position: absolute;
+  margin-top: 280px;
+  width: 100%;
 }
 
+.social-container {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 975px) {
+  .socials {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin-top: 250px;
+  }
+  .social-container {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .socials {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin-top: 420px;
+  }
+  .social-container {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  }
+}
 .devicons {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-top: 480px;
+  align-items: center;
+  margin-top: 420px;
   position: absolute;
+  gap: 20px;
 }
 
 .devicons ul {
@@ -221,8 +266,31 @@ html, body {
 }
 
 .devicons img {
-  width: 35px;
-  margin: 0 10px;
+  width: 40px;
+  margin: 0 25px;
+  margin-top: 10px;
+}
+.devicon-name {
+  font-size: 16px;
+  color: #f0f0f0;
+}
+
+.devicon-unit {
+  display: flex;flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 975px) {
+  .devicons { 
+    margin-top: 380px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+  .devicons { 
+  margin-top: 550px;
+  }
 }
 
 /* Art */
@@ -270,14 +338,13 @@ html, body {
 .center-column {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
   padding: 20px;
   width: calc(100vw - 400px);
   height: 100vh;
   background-color: rgb(31, 31, 31);
   overflow-y: auto;
   position: relative;
-  margin-left: 200px;
-  margin-right: 200px;
   z-index: 1;
 }
 
@@ -329,6 +396,8 @@ html, body {
     box-sizing: border-box;
     max-height: none;
     overflow-y: visible;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
