Adding Images and Updates
- Added several new portfolio images
- Updated Layout
- Added new profile image

--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -564,6 +564,10 @@ footer a:hover {
   color: lightgreen;
   font-size: x-large;
 }
+.subtitle-art {
+  color: lightgreen;
+  font-size: x-large;
+}
 .quote {
   font-family: 'Orbitron', sans-serif;
 }
