--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -572,10 +572,29 @@ footer a:hover {
   font-family: 'Orbitron', sans-serif;
 }
 
+.links-section {
+  width: 100%;
+}
+
 .contact-container {
   display: flex;
-  flex-direction: column;
-  padding: 20px;
+  flex-direction: column !important;
+  align-items: flex-start;
+  width: 100%;
+}
+@media (max-width: 1100px) {
+  #calendly-embed {
+    height: 1100px;
+  }
+}
+#calendly-embed {
+  width: 100% !important;
+  min-height: 900px;
+}
+
+#calendly-embed iframe {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .email-form {
